@@ -1,24 +1,40 @@
 package org.example.datasource;
 
+import org.example.config.JdbcSourceConfig;
+import org.springframework.jdbc.core.JdbcTemplate;
+
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 public class CredDataSource {
-    //!!! 注意：在dig记录中探测域名最后都以.结尾
-    private static final Map<String, Map<String, List<String>>> creds = Map.of(
-            "baidu.com.", Map.of("A", List.of("39.156.66.10", "110.242.68.66"),
-                    "NS", List.of("ns7.baidu.com.", "ns4.baidu.com.", "dns.baidu.com.",
-                            "ns2.baidu.com.", "ns3.baidu.com.")),
-            "sina.com.", Map.of("A", List.of("64.71.151.11"),
-                    "NS", List.of("ns1.sina.com.", "ns2.sina.com.cn.", "ns2.sina.com.",
-                            "ns3.sina.com.", "ns1.sina.com.cn.", "ns4.sina.com.",
-                            "ns4.sina.com.cn.", "ns3.sina.com.cn."))
+
+    private static final Map<String, String> typeMapper = Map.of(
+      "A", "dig_a", "AAAA", "dig_aaaa", "NS", "dig_ns", "MX", "dig_mx", "CNAME", "dig_cname"
     );
 
+    private static final JdbcTemplate jdbcTemplate;
+
+    static {
+        jdbcTemplate = JdbcSourceConfig.getJdbcTemplate();
+    }
+
     public static List<String> getCreds(String domain, String type) {
-        if (creds.containsKey(domain) && creds.get(domain).containsKey(type)) {
-            return creds.get(domain).get(type);
+
+        if(!typeMapper.containsKey(type))
+        {
+            throw new RuntimeException("Invalid type: " + type);
         }
-        return List.of();
+        String sql = String.format("SELECT %s FROM dig_data WHERE domain_name=?", typeMapper.get(type));
+        List<String> creds = new ArrayList<>();
+        List<String> rawRecords = jdbcTemplate.queryForList(sql, String.class, domain);
+        for(String rawRecord : rawRecords)
+        {
+            String [] records = rawRecord.split(",");
+            creds.addAll(Arrays.asList(records));
+        }
+
+        return creds;
     }
 }
